ICEX-737 #comment fix header logo on mobile

--- a/components/uiHeader/uiheader.sass
+++ b/components/uiHeader/uiheader.sass
@@ -140,6 +140,7 @@ $header-sticked-bg: $secondary !default
   background: $header-logo-bg
   @include media-breakpoint-down(xs)
     padding: 0 .5rem
+    width: 9rem
 
   img
     max-width: 100%
